2010-09-02  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_disk_file.cc (fhandler_base::fstat_by_nfs_ea): Simplify.
	Just call nfs_fetch_fattr3 if called via fstat.
	* nfs.cc (nfs_fetch_fattr3): New function to fetch NFS fattr3 info from
	file handle.
	* nfs.h (nfs_fetch_fattr3): Declare.
	* path.cc (symlink_info::check): Simplify NFS case.  Just call
	nfs_fetch_fattr3.

2010-09-02  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_procsys.cc (fhandler_procsys::exists): Return virt_none
	if path is invalid.

2010-10-01  Christopher Faylor  <me+cygwin@cgf.cx>

	* autoload.cc (std_dll_init): Add a retry loop.

2010-09-30  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler.cc: Drop including nfs.h.
	* fhandler_disk_file.cc: Ditto.
	(fhandler_base::fstat_by_nfs_ea): Use fattr3 from path_conv member,
	unless called from fstat.
	* path.cc: Drop including nfs.h.
	(symlink_info::check): Rearrange definition of file info buffers.
	Fetch fattr3 info for files on NFS and store in conv_hdl for later
	use in fhandler_base::fstat_by_nfs_ea.  Use fattr3 file type to
	recognize symlink on NFS and try to fetch symlink target only for
	actual symlinks.
	* path.h: Include nfs.h.
	(class path_conv_handle): Change file info storage to union of
	FILE_NETWORK_OPEN_INFORMATION and fattr3 structures.
	(path_conv_handle::fnoi): Align to aforementioned change.
	(path_conv_handle::nfsattr): New method.
	(path_conv::nfsattr): New method.

2010-09-30  Corinna Vinschen  <corinna@vinschen.de>

	* path.cc (symlink_info::check): Remove erroneous assumption about
	required permissions when reading NFS symlinks.

2010-09-29  Christopher Faylor  <me+cygwin@cgf.cx>

	* fhandler_tty.cc (fhandler_tty_slave::init): Revert to using
	tc->setpgid since previous change broke some use cases.

2010-09-28  Christopher Faylor  <me+cygwin@cgf.cx>

	* fhandler_tty.cc (fhandler_tty_slave::init): Add debugging.  Use
	tcsetpgrp to potentially set pgid since it is smarter about deciding if