@@ -1,3 +1,9 @@
+2010-10-02  Christopher Faylor  <me+cygwin@cgf.cx>
+
+	* dcrt0.cc (dll_crt0_0): Move _main_tls initialization here.
+	(__dll_crt0): Only initialize _main_tls if it changes.
+	* fhandler_console.cc (fhandler_console::write): Fix debugging output.
+
 2010-09-02  Corinna Vinschen  <corinna@vinschen.de>
 
 	* fhandler_disk_file.cc (fhandler_base::fstat_by_nfs_ea): Simplify.
